--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Auction Page",
   "main": "index.js",
   "scripts": {
-    "watch": "sass src/scss:dist/css --watch",
+    "build": "sass src/scss:dist/css",
+    "watch": "sass --watch src/scss:dist/css & live-server",
     "start": "live-server",
     "dev": "npm-run-all --parallel watch start"
   },
@@ -12,7 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^5.2.0"
+    "bootstrap": "^5.3.2"
   },
   "devDependencies": {
     "live-server": "^1.2.2",
